@@ -235,7 +235,7 @@ name|VERBOSE
 init|=
 literal|false
 decl_stmt|;
-comment|/**    *  We will cache a newly created output if 1) it's a    *  flush or a merge and the estimated size of the merged segmnt is<=    *  maxMergeSizeMB, and 2) the total cached bytes is<=    *  maxCachedMB */
+comment|/**    *  We will cache a newly created output if 1) it's a    *  flush or a merge and the estimated size of the merged segment is<=    *  maxMergeSizeMB, and 2) the total cached bytes is<=    *  maxCachedMB */
 DECL|method|NRTCachingDirectory
 specifier|public
 name|NRTCachingDirectory
@@ -282,6 +282,134 @@ operator|*
 literal|1024
 argument_list|)
 expr_stmt|;
+block|}
+annotation|@
+name|Override
+DECL|method|getLockFactory
+specifier|public
+name|LockFactory
+name|getLockFactory
+parameter_list|()
+block|{
+return|return
+name|delegate
+operator|.
+name|getLockFactory
+argument_list|()
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|setLockFactory
+specifier|public
+name|void
+name|setLockFactory
+parameter_list|(
+name|LockFactory
+name|lf
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|delegate
+operator|.
+name|setLockFactory
+argument_list|(
+name|lf
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Override
+DECL|method|getLockID
+specifier|public
+name|String
+name|getLockID
+parameter_list|()
+block|{
+return|return
+name|delegate
+operator|.
+name|getLockID
+argument_list|()
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|makeLock
+specifier|public
+name|Lock
+name|makeLock
+parameter_list|(
+name|String
+name|name
+parameter_list|)
+block|{
+return|return
+name|delegate
+operator|.
+name|makeLock
+argument_list|(
+name|name
+argument_list|)
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|clearLock
+specifier|public
+name|void
+name|clearLock
+parameter_list|(
+name|String
+name|name
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|delegate
+operator|.
+name|clearLock
+argument_list|(
+name|name
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Override
+DECL|method|toString
+specifier|public
+name|String
+name|toString
+parameter_list|()
+block|{
+return|return
+literal|"NRTCachingDirectory("
+operator|+
+name|delegate
+operator|+
+literal|"; maxCacheMB="
+operator|+
+operator|(
+name|maxCachedBytes
+operator|/
+literal|1024
+operator|/
+literal|1024.
+operator|)
+operator|+
+literal|" maxMergeSizeMB="
+operator|+
+operator|(
+name|maxMergeSizeBytes
+operator|/
+literal|1024
+operator|/
+literal|1024.
+operator|)
+operator|+
+literal|")"
+return|;
 block|}
 annotation|@
 name|Override
@@ -339,15 +467,9 @@ name|listAll
 argument_list|()
 control|)
 block|{
-assert|assert
-operator|!
-name|files
-operator|.
-name|contains
-argument_list|(
-name|f
-argument_list|)
-assert|;
+comment|// Cannot do this -- if lucene calls createOutput but
+comment|// file already exists then this falsely trips:
+comment|//assert !files.contains(f): "file \"" + f + "\" is in both dirs";
 name|files
 operator|.
 name|add
@@ -475,7 +597,6 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-comment|// Delete from both, in case we are currently uncaching:
 if|if
 condition|(
 name|VERBOSE
@@ -493,6 +614,25 @@ name|name
 argument_list|)
 expr_stmt|;
 block|}
+if|if
+condition|(
+name|cache
+operator|.
+name|fileExists
+argument_list|(
+name|name
+argument_list|)
+condition|)
+block|{
+assert|assert
+operator|!
+name|delegate
+operator|.
+name|fileExists
+argument_list|(
+name|name
+argument_list|)
+assert|;
 name|cache
 operator|.
 name|deleteFile
@@ -500,6 +640,9 @@ argument_list|(
 name|name
 argument_list|)
 expr_stmt|;
+block|}
+else|else
+block|{
 name|delegate
 operator|.
 name|deleteFile
@@ -507,6 +650,7 @@ argument_list|(
 name|name
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 annotation|@
 name|Override
@@ -824,47 +968,6 @@ name|bufferSize
 argument_list|)
 return|;
 block|}
-block|}
-annotation|@
-name|Override
-DECL|method|makeLock
-specifier|public
-name|Lock
-name|makeLock
-parameter_list|(
-name|String
-name|name
-parameter_list|)
-block|{
-return|return
-name|delegate
-operator|.
-name|makeLock
-argument_list|(
-name|name
-argument_list|)
-return|;
-block|}
-annotation|@
-name|Override
-DECL|method|clearLock
-specifier|public
-name|void
-name|clearLock
-parameter_list|(
-name|String
-name|name
-parameter_list|)
-throws|throws
-name|IOException
-block|{
-name|delegate
-operator|.
-name|clearLock
-argument_list|(
-name|name
-argument_list|)
-expr_stmt|;
 block|}
 comment|/** Close this directory, which flushes any cached files    *  to the delegate and then closes the delegate. */
 annotation|@
