@@ -756,6 +756,63 @@ name|conf
 argument_list|)
 decl_stmt|;
 block|}
+DECL|method|testDeleteFile
+specifier|public
+name|void
+name|testDeleteFile
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Directory
+name|dir
+init|=
+operator|new
+name|NRTCachingDirectory
+argument_list|(
+name|newDirectory
+argument_list|()
+argument_list|,
+literal|2.0
+argument_list|,
+literal|25.0
+argument_list|)
+decl_stmt|;
+name|dir
+operator|.
+name|createOutput
+argument_list|(
+literal|"foo.txt"
+argument_list|)
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|dir
+operator|.
+name|deleteFile
+argument_list|(
+literal|"foo.txt"
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|dir
+operator|.
+name|listAll
+argument_list|()
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+name|dir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 end_class
 
